<resources>
    <string name="app_name">My Cities Weather</string>
    <string name="no_cities_title">Hola, \nBienvenido!</string>
    <string name="no_cities_subtitle">¿Qué te parece si agregamos una nueva ciudad?</string>
    <string name="no_cities_add_button">Agregar ciudad</string>
    <string name="add_cities_title">Agregar ciudad</string>
    <string name="search_city_placeholder">Buscar ciudad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cities_title">Mis ciudades</string>
    <string name="weather_wind">Viento</string>
    <string name="weather_air_preassure">Presión de aire</string>
    <string name="weather_humidity">Humedad</string>
    <string name="weather_temp_min">Temp Min</string>
    <string name="weather_temp_max">Temp Max</string>
    <string name="weather_next_days">Pronóstico siguientes 6 días</string>
    <string name="error_default">Ups! Algo ha ido mal, prueba de nuevo en unos segundos.</string>
    <string name="label_loading">Cargando...</string>
</resources>